// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PreviewerTestLayout > dispatches "mount" with the areas 1`] = `
{
  "content": <div
    class="qti-item-container"
  />,
  "main": <main
    id="test-main"
    tabindex="0"
  >
    <div
      class="scroll-first-child"
    />
     
    <div
      class="qti-item-container"
    />
     
    
     
    <div
      class="scroll-last-child"
    />
  </main>,
  "navigation": <nav
    class="bottom-bar do-not-read"
    id="test-navigation"
  />,
  "testRunner": <div
    class="test-runner initial"
    style="--window-height: 767px;"
  >
    <div
      class="top-bar"
      id="test-top-bar"
    />
     
    <main
      id="test-main"
      tabindex="0"
    >
      <div
        class="scroll-first-child"
      />
       
      <div
        class="qti-item-container"
      />
       
      
       
      <div
        class="scroll-last-child"
      />
    </main>
     
    <nav
      class="bottom-bar do-not-read"
      id="test-navigation"
    />
  </div>,
  "topBar": <div
    class="top-bar"
    id="test-top-bar"
  />,
}
`;

exports[`PreviewerTestLayout > updates based on the test runner status 1`] = `
<body>
  <div>
    <div
      class="test-runner initial"
      style="--window-height: 767px;"
    >
      <div
        class="top-bar"
        id="test-top-bar"
      />
       
      <main
        id="test-main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <div
          class="qti-item-container"
        />
         
        
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        class="bottom-bar do-not-read"
        id="test-navigation"
      />
    </div>
    
    
  </div>
</body>
`;

exports[`PreviewerTestLayout > updates based on the test runner status 2`] = `
<body>
  <div>
    <div
      class="test-runner loading"
      style="--window-height: 767px;"
    >
      <div
        class="top-bar"
        id="test-top-bar"
      />
       
      <main
        id="test-main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <div
          class="qti-item-container hidden-item-container"
        />
         
        <div
          class="transition"
        >
          <div
            aria-live="assertive"
            class="loading-wrapper small"
            role="alert"
          >
            <div
              class="loading"
            />
             
            <div
              class="content"
            >
              <p
                class="text"
              >
                loading
              </p>
              
            </div>
          </div>
          
           
          <p>
            Please wait a little longer while your content loads
          </p>
        </div>
        
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        class="bottom-bar do-not-read"
        id="test-navigation"
      />
    </div>
    
    
  </div>
</body>
`;

exports[`PreviewerTestLayout > updates based on the test runner status 3`] = `
<body>
  <div>
    <div
      class="test-runner interacting"
      style="--window-height: 767px;"
    >
      <div
        class="top-bar"
        id="test-top-bar"
      />
       
      <main
        id="test-main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <div
          class="qti-item-container"
        />
         
        
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        class="bottom-bar do-not-read"
        id="test-navigation"
      />
    </div>
    
    
  </div>
</body>
`;

exports[`PreviewerTestLayout > updates based on the test runner status 4`] = `
<body>
  <div>
    <div
      class="test-runner loading"
      style="--window-height: 767px;"
    >
      <div
        class="top-bar"
        id="test-top-bar"
      />
       
      <main
        id="test-main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <div
          class="qti-item-container hidden-item-container"
        />
         
        <div
          class="transition"
        >
          <div
            aria-live="assertive"
            class="loading-wrapper small"
            role="alert"
          >
            <div
              class="loading"
            />
             
            <div
              class="content"
            >
              <p
                class="text"
              >
                loading
              </p>
              
            </div>
          </div>
          
           
          <p>
            Please wait a little longer while your content loads
          </p>
        </div>
        
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        class="bottom-bar do-not-read"
        id="test-navigation"
      />
    </div>
    
    
  </div>
</body>
`;
